# Arkanoid

./: README.md  build.gradle  gradle.properties  keystore_arkanoid.jks
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/orcchg/arkanoid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/include/: ActiveObject.h  AssetStorage.h  AsyncContext.h  AsyncContextHelper.h  Ball.h  BallDimens.h  BallPosition.h  Bite.h  BiteDimens.h  Block.h  EGLConfigChooser.h  Event.h  EventListener.h  Exceptions.h  ExplosionPackage.h  GameProcessor.h  LaserPackage.h  Level.h  LevelDimens.h  ListenerBinder.h  Macro.h  Params.h  Prize.h  PrizePackage.h  PrizeProcessor.h  Resources.h  RowCol.h  Shader.h  SoundBuffer.h  SoundPlayer.h  SoundProcessor.h  Texture.h  logger.h  rgbstruct.h  utils.h
app/src/main/cpp/png/: png.c  png.h  pngconf.h  pngpriv.h  pngtest.c
app/src/main/cpp/png/include/: config.h
app/src/main/cpp/src/: AssetStorage.cpp  AsyncContext.cpp  AsyncContextHelper.cpp  Block.cpp  EGLConfigChooser.cpp  ExplosionPackage.cpp  GameProcessor.cpp  Level.cpp  LevelDimens.cpp  Prize.cpp  PrizePackage.cpp  PrizeProcessor.cpp  Resources.cpp  Shader.cpp  SoundBuffer.cpp  SoundPlayer.cpp  SoundProcessor.cpp  Texture.cpp  utils.cpp
app/src/main/java/com/orcchg/arkanoid/surface/: AboutActivity.java  ArkanoidApplication.java  AsyncContext.java  Database.java  EdgeColor.java  GameSurface.java  InitActivity.java  Levels.java  MainActivity.java  NativeResources.java  (+2 more)
app/src/main/res/drawable/: bottom_gradient.xml  button_selector.xml  left_gradient.xml  right_gradient.xml  top_gradient.xml
app/src/main/res/layout/: activity_about.xml  activity_init.xml  activity_main.xml  dialog_one_button.xml  dialog_two_buttons.xml
app/src/main/res/menu/: arkanoid_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  integers.xml  strings.xml  styles.xml
app/src/main/res/values-es-rUS/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sw600dp/: dimens.xml  integers.xml
app/src/main/res/values-sw720dp/: integers.xml
app/src/main/res/values-v11/: styles.xml
app/src/main/res/values-v14/: styles.xml
app/src/test/java/com/orcchg/arkanoid/: ExampleUnitTest.java
(+4 files in other folders)
